@@ -100,7 +100,7 @@
  ****************************************************************************/
 
 /****************************************************************************
- * Name: nxtext_renderglyph
+ * Name: nxtext_freeglyph
  ****************************************************************************/
 
 static void nxtext_freeglyph(FAR struct nxtext_glyph_s *glyph)
